Add workflow to publish on release created